[tool.poetry]
name = "robot-practice"
version = "0.1.0"
description = "Robot traverses a grid to find his favourite beverage."
authors = ["Marta Wolinska"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
